...
    <string name="input_book_source_url">Input book source address</string>
    <string name="del_file">Delete file</string>
    <string name="del_file_success">Deleted file</string>
    <string name="sure_del_file">Are you sure to delete this file?</string>
    <string name="files_tree">Directory</string>
    <string name="intelligent_import">Intelligent import</string>
    <string name="discovery">Discovery</string>
    <string name="switch_display_style">Switch display styles</string>
    <string name="import_per">Import local books requires storage permission</string>
    <string name="night_theme">Night Theme</string>
    <string name="eink_theme">E-Ink</string>
    <string name="eink_theme_desc">Optimization for E-ink devices</string>
    <string name="get_storage_per">requires storage permission</string>
...
    <string name="fast_rewind">Speed down</string>
    <string name="fast_forward">Speed up</string>
    <string name="skip_previous">Prior</string>
    <string name="skip_next">Next</string>
    <string name="music">Music</string>
    <string name="audio">Audio</string>
    <string name="is_enable">Enable</string>
    <string name="enable_js">Enable js</string>
    <string name="load_with_base_url">Load BaseUrl</string>
    <string name="all_source">All Sources</string>
    <string name="cannot_empty">The input content cannot be empty</string>
    <string name="clear_find_cache">Clear Discovery cache</string>
    <string name="edit_find">Edit Discovery</string>
...
    <string name="verification_code">Verification code</string>
    <string name="timeout_millisecond">Timed out milliseconds</string>
    <string name="file_not_supported">Continue to open although %1$s is not supported ?</string>
    <string name="import_tts">Import TTS</string>
    <string name="import_theme">Import theme</string>
    <string name="import_txt_toc_rule">Import txt directory rules</string>
    <string name="auto_save_cookie">CookieJar</string>
    <string name="cookie">Clear cookie</string>
    <string name="download_and_import_file">Import online book files</string>
    <string name="upload_imported_book_to_webdav">Sync downloaded book to WebDAV</string>
    <string name="webdav_book_exists_confirm">A book with the same name already exists on WebDAV. Overwrite it?</string>
    <string name="webdav_not_configured">WebDAV is not configured</string>
    <string name="upload_book_success">Upload Success</string>
...
    <string name="page_touch_click_title">边缘点击阈值</string>
    <string name="page_touch_click_summary">左右边缘多少距离不会触发点击事件，默认为0px</string>
    <string name="page_touch_click_dialog_title">边缘点击阈值</string>
    <string name="check_selected_interval">Select zones</string>
    <string name="show_add_to_shelf_alert_title">Prompt to add to bookshelf when return</string>
    <string name="show_add_to_shelf_alert_summary">Prompt to add to bookshelf when return from reading books that are not on the bookshelf</string>
    <string name="review">Review</string>
    <string name="rule_review_summary_url">Review summary URL (reviewSummaryUrl)</string>
    <string name="rule_review_summary_list">Review summary list (summaryListRule)</string>
    <string name="rule_review_summary_id">Paragraph index (summaryParagraphIndexRule)</string>
    <string name="rule_review_summary_count">Review count (summaryCountRule)</string>
    <string name="rule_review_summary_key">Paragraph data (summaryParagraphDataRule)</string>
    <string name="rule_review_detail_url">Review detail URL (reviewDetailUrl)</string>
...
    <string name="overlay">叠加</string>
    <string name="margin">间距</string>
    <string name="replace_to_js">js处理</string>
    <string name="layout_type">样式：</string>
    <string name="layout_list_compact">紧凑列表</string>
    <string name="enable_preload">预加载</string>
    <string name="is_event_listener">事件监听</string>
    <string name="rule_call_back">回调操作（callBackJs）</string>
    <string name="rule_content_batch">批量正文规则（contentBatch）</string>
    <string name="rule_max_batch_size">最大批量数量（maxBatchSize）</string>
    <string name="time_hour">小时</string>
    <string name="custom_button">定制按钮</string>
    <string name="welcome_show_time">欢迎页显示时间</string>
    <string name="welcome_show_time_summary">设为0不显示欢迎页</string>
    <string name="domain">域名</string>
    <string name="write_source_comment">写入源注释</string>
    <string name="auto_play">自动播放</string>
    <string name="start_full">直接全屏播放</string>
...
